# ovs

./: .gitignore  config.h.meson  meson.build  meson_options.txt
Documentation/: meson.build
debian/: openvswitch-common.install  openvswitch-doc.install  openvswitch-source.install  openvswitch-switch-dpdk.install  openvswitch-switch.install  openvswitch-test.install  rules
include/: meson.build
include/linux/: meson.build
include/openvswitch/: meson.build
include/sparse/: meson.build
include/windows/: meson.build
lib/: meson.build
ofproto/: meson.build
ovsdb/: meson.build
python/: meson.build
python/ovs/: meson.build
tests/: meson.build  test_library.py  test_strtok_r.py  util.py
utilities/: meson.build  ovs-pki.in  ovs-sim.in
vswitchd/: meson.build
vtep/: meson.build
