noinst_hdr = [
    'rte_byteorder.h',
    'xmmintrin.h',
    'arpa/inet.h',
    'bits/floatn.h',
    'assert.h',
    'math.h',
    'numa.h',
    'netinet/in.h',
    'netinet/ip6.h',
    'netpacket/packet.h',
    'pthread.h',
    'rte_atomic.h',
    'rte_memcpy.h',
    'sys/socket.h',
    'sys/sysmacros.h',
    'sys/types.h',
    'sys/wait.h',
    'threads.h',
    'linux/if_packet.h',
    'linux/tc_act/tc_pedit.h',
]