noinst_hdr = [
    'arpa/inet.h',
    'dirent.h',
    'getopt.h',
    'linux/netfilter/nf_conntrack_common.h',
    'linux/netfilter/nf_conntrack_ftp.h',
    'linux/netfilter/nf_conntrack_sctp.h',
    'linux/netfilter/nf_conntrack_tcp.h',
    'linux/netfilter/nfnetlink.h',
    'linux/netfilter/nfnetlink_conntrack.h',
    'linux/netfilter/nfnetlink_cttimeout.h',
    'linux/pkt_sched.h',
    'linux/types.h',
    'net/if.h',
    'netdb.h',
    'netpacket/packet.h',
    'netinet/icmp6.h',
    'netinet/in.h',
    'netinet/in_systm.h',
    'netinet/ip.h',
    'netinet/ip6.h',
    'netinet/tcp.h',
    'poll.h',
    'strings.h',
    'syslog.h',
    'sys/epoll.h',
    'sys/ioctl.h',
    'sys/resource.h',
    'sys/socket.h',
    'sys/time.h',
    'sys/uio.h',
    'sys/un.h',
    'sys/wait.h',
    'unistd.h',
    'windefs.h',
]